src/codegen/tests/snapshots/rusty__codegen__tests__codegen_error_messages_tests__invalid_array_access_should_be_reported_with_line_number.snap
---
source: src/codegen/tests/codegen_error_messages_tests.rs
assertion_line: 106
expression: msg
---
error[E071]: Invalid array access: type 'INT' is not an array type
  ┌─ <internal>:6:15
  │
6 │             x[3] := 3;
  │               ^ Invalid array access: type 'INT' is not an array type
